[package]
name = "spybotics_clone"
version = "0.1.0"
authors = ["infeo <armin.schrenk@hotmail.de>", "maspri"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde = "1.0.114"
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "main" }
log = { version = "0.4.8", features = ["serde"] }
inventory = "0.1.10"
#amethyst_config = "0.14.0"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
#config = ["amethyst/config"]

#nightly = ["amethyst/nightly"]
